--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "plotly.js": "^2.27.0",
     "react-plotly.js": "^2.6.0",
     "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "cytoscape-cose-bilkent": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
